# batteries

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake.yml
CMake/: BatteriesHelpers.cmake  batteriesConfig.cmake.in
CMake/Googletest/: DownloadGTest.cmake
batteries/: CMakeLists.txt
batteries/copts/: BatteriesConfigureCopts.cmake  copts.py  generate_copts.py
batteries/errors/: CMakeLists.txt  error.h  error.hpp  error_test.cpp
batteries/net/: CMakeLists.txt  base.cpp  base.h  query.cpp  query.h  query.hpp  query_test.cpp  url.cpp  url.h  url.hpp  url_test.cpp
batteries/net/internal/: escape.cpp  escape.h  escape.hpp  parse.cpp  parse.h  parse.hpp
batteries/strings/: CMakeLists.txt  match.h  match_test.cpp
cmake/: BatteriesHelpers.cmake  BatteriesInstallDirs.cmake  clang_format.cmake  compiler_options.cmake  cpack.cmake  cppcheck.cmake  dependencies.cmake
